--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,13 +11,13 @@ layout: default
     <h1 class="postTitle">{{ page.title }}</h1>
     <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
   </header>
-  {% if page.tags %}
+  <!--{% if page.tags %}
     {% for tag in page.tags %}
       {% if site.data.tags contains tag %}
         <span class="tag">{{ site.data.format[tag] }}</span>
       {% endif %}
     {% endfor %}
-  {% endif %}
+  {% endif %}-->
   {{ content }}
 
   <!-- POST NAVIGATION -->
