--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -7,7 +7,7 @@
 
   gtag('config', 'G-Y88N8KV4RM');
 </script>
-<script>
+<!--<script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,4 +16,4 @@
 ga('create', '{{ site.google_analytics }}', 'auto');
 ga('send', 'pageview');
 
-</script>
+</script>-->
