--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
    {%- include footer.html -%}
    {%- include scripts.html -%}
-   {% include analytics.html %}
+   <!--{% include analytics.html %}-->
 </body>
 
 </html>
