--- a/_includes/anayltics.html
+++ b/_includes/anayltics.html
@@ -6,4 +6,5 @@
   gtag('js', new Date());
 
   gtag('config', 'G-Y88N8KV4RM');
+  gtag('config', '{{site.analytics.google.measurement_id }}');
 </script>
