--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,4 @@
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VKRL0XTNV0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VKRL0XTNV0');
-</script>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -88,6 +79,6 @@
 
     <!-- Modernizr -->
     <script src="/assets/js/modernizr.custom.15390.js"" type="text/javascript"></script>
-
+    {% include analytics.html %}
     {%- if site.google_analytics -%} {%- include google_analytics.html -%} {%- endif -%}
 </head>
