--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,9 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y88N8KV4RM"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-250084565-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Y88N8KV4RM');
+  gtag('config', 'UA-250084565-1');
 </script>
